<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_fridge">

    <fragment
        android:id="@+id/navigation_fridge"
        android:name="com.example.whatsinmyfridge.ui.home.FridgeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_fridge"/>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.whatsinmyfridge.ui.Cart.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.whatsinmyfridge.ui.notifications.ListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_list"/>

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.whatsinmyfridge.ui.recipe.RecipeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_recipe"/>

</navigation>